--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "start": "node dist/app.js",
     "dev": "nodemon app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --testTimeout=5000",
+    "seed": "ts-node prisma/seed.ts"
   },
   "repository": {
     "type": "git",
@@ -26,11 +27,16 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "mongoose": "^8.3.2",
+    "supertest": "^6.3.4",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   }
