--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "jest": "^29.7.0",
     "mongoose": "^8.3.2",
     "supertest": "^6.3.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
